--- a/src/main/webapp/admin/login.html
+++ b/src/main/webapp/admin/login.html
@@ -20,6 +20,9 @@
     <!-- Custom styles for this template-->
     <link href="/admin/css/sb-admin.css" rel="stylesheet">
     <script src="/admin/js/login.js"></script>
+    <link rel="stylesheet" href="vendor/datatables/dataTables.bootstrap4.css">
+    <script src="vendor/datatables/dataTables.bootstrap4.js"></script>
+    <script src="vendor/datatables/jquery.dataTables.js"></script>
 
   </head>
 
