--- a/src/main/webapp/admin/login.html
+++ b/src/main/webapp/admin/login.html
@@ -45,7 +45,7 @@
             <div class="form-group">
               <div class="checkbox">
                 <label>
-                  <input type="checkbox" value="remember-me">
+                  <input type="checkbox" value="true" id="remember-password">
                   Remember Password
                 </label>
               </div>
